fix delete scrollbar in firefox

--- a/app/css/style.css
+++ b/app/css/style.css
@@ -117,7 +117,7 @@ body {
   background: transparent;
 }
 
--moz-scrollbar {
+::-moz-scrollbar {
   display: none;
 }
 
